--- a/src/assets/styles/components/Card.scss
+++ b/src/assets/styles/components/Card.scss
@@ -23,7 +23,7 @@
 }
 .Card-backImage,
 .Card-frontImage{
-    box-shadow: 0px 4px 4px #d6d3d3;
+    box-shadow: 2px 2px 2px #000;
     border-radius: 0.6rem;
     position: absolute;
     left: 0;
